new dimension system, dimension-settings.json